--- a/app/src/main/res/layout/artist_card.xml
+++ b/app/src/main/res/layout/artist_card.xml
@@ -109,24 +109,32 @@
                     app:layout_constraintTop_toBottomOf="@id/genre_text">
 
                     <ImageView
+                        android:id="@+id/star1"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_baseline_star_rate_50" />
+                        android:src="@drawable/ic_baseline_star_outline_24" />
+                    <ImageView
+                        android:id="@+id/star2"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/ic_baseline_star_outline_24" />
 
                     <ImageView
+                        android:id="@+id/star3"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_baseline_star_rate_50" />
+                        android:src="@drawable/ic_baseline_star_outline_24" />
 
                     <ImageView
+                        android:id="@+id/star4"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_baseline_star_rate_50" />
-
+                        android:src="@drawable/ic_baseline_star_outline_24" />
                     <ImageView
+                        android:id="@+id/star5"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_baseline_star_rate_50" />
+                        android:src="@drawable/ic_baseline_star_outline_24" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <TextView
