--- a/app/src/main/res/layout/fragment_artist_profile.xml
+++ b/app/src/main/res/layout/fragment_artist_profile.xml
@@ -576,12 +576,11 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </com.google.android.material.card.MaterialCardView>
 
-                <View
+                <com.google.android.material.divider.MaterialDivider
                     android:id="@+id/divider5"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="15dp"
-                    android:background="@color/primary_pink"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/review_card" />
