--- a/app/src/main/res/layout/review_card.xml
+++ b/app/src/main/res/layout/review_card.xml
@@ -6,12 +6,8 @@
 
         <variable
             name="reviewModel"
-            type="com.example.rockaroundapp.model.ArtistReview" />
+            type="com.example.rockaroundapp.model.Review" />
     </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/review_card"
@@ -42,7 +38,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="5dp"
-                    android:text="John Doe"
                     android:textSize="12sp"
                     app:layout_constraintStart_toEndOf="@id/reviewer_profile_img_2"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +46,7 @@
                     android:id="@+id/review_date_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@={reviewModel.date}"
+                    android:text="@{reviewModel.date}"
                     android:textSize="9sp"
                     app:layout_constraintStart_toStartOf="@id/reviewer_name_2"
                     app:layout_constraintTop_toBottomOf="@id/reviewer_name_2" />
@@ -59,7 +54,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"
-                    android:layout_marginStart="10sp"
+                    android:layout_marginStart="15dp"
                     app:layout_constraintStart_toEndOf="@id/reviewer_name_2"
                     app:layout_constraintTop_toTopOf="@id/reviewer_name_2">
 
@@ -99,7 +94,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="@={reviewModel.title}"
+                    android:text="@{reviewModel.title}"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="@id/review_date_2"
                     app:layout_constraintTop_toBottomOf="@id/review_date_2" />
@@ -110,7 +105,7 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="3dp"
                     android:layout_marginEnd="108dp"
-                    android:text="@={reviewModel.description}"
+                    android:text="@{reviewModel.description}"
                     android:textSize="10sp"
                     app:layout_constraintStart_toStartOf="@id/review_title_2"
                     app:layout_constraintTop_toBottomOf="@id/review_title_2" />
@@ -118,19 +113,9 @@
                 <com.google.android.material.divider.MaterialDivider
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:dividerColor="@color/primary_pink"
-                    app:layout_constraintTop_toBottomOf="parent" />
+                    app:dividerThickness="1dp"
+                    android:layout_marginTop="5dp"
+                    app:layout_constraintTop_toBottomOf="@id/review_description_2"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.divider.MaterialDivider
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            app:dividerThickness="1dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/review_card" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
