--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -56,7 +56,7 @@
         android:id="@+id/discover"
         android:name="com.example.rockaroundapp.view.DiscoverFragment"
         android:label="fragment_artist_explore"
-        tools:layout="@layout/fragment_artist_explore" >
+        tools:layout="@layout/fragment_discover" >
         <action
             android:id="@+id/action_artistExploreFragment_to_soloProfileFragment"
             app:destination="@id/artistProfile"
@@ -145,6 +145,13 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_artistProfile_to_userReviewsFragment"
+            app:destination="@id/userReviewsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/account"
@@ -155,5 +162,18 @@
         android:id="@+id/venueProfileFragment"
         android:name="com.example.rockaroundapp.view.VenueProfileFragment"
         android:label="fragment_venue_profile"
-        tools:layout="@layout/fragment_venue_profile"/>
+        tools:layout="@layout/fragment_venue_profile">
+        <action
+            android:id="@+id/action_venueProfileFragment_to_userReviewsFragment"
+            app:destination="@id/userReviewsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/userReviewsFragment"
+        android:name="com.example.rockaroundapp.view.UserReviewsFragment"
+        android:label="fragment_user_reviews"
+        tools:layout="@layout/fragment_user_reviews" />
 </navigation>
