--- a/app/src/main/res/layout/artist_card.xml
+++ b/app/src/main/res/layout/artist_card.xml
@@ -96,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:text="@{artistModel.genreString}"
-                    android:textSize="1dp"
+                    android:textSize="8sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/user_type" />
 
