--- a/app/src/main/res/layout/fragment_group_setup.xml
+++ b/app/src/main/res/layout/fragment_group_setup.xml
@@ -55,9 +55,9 @@
                 android:id="@+id/stage_name_textInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/upload_image_button">
@@ -66,6 +66,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Group name"
+                    android:layout_marginStart="20sp"
+                    android:layout_marginEnd="20sp"
+                    android:background="@drawable/edit_text_background"
                     android:inputType="textCapSentences"
                     android:text="@={groupSetupViewModel.groupName}" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -84,7 +87,6 @@
                 android:text="@={groupSetupViewModel.bio}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/add_genre_button"
                 app:layout_constraintTop_toBottomOf="@id/stage_name_textInputLayout" />
 
             <TextView
@@ -94,9 +96,11 @@
                 android:layout_marginEnd="31dp"
                 android:clickable="false"
                 android:focusable="false"
+                android:background="@drawable/bio_box_outline"
+                android:layout_marginStart="20dp"
                 app:layout_constraintBottom_toBottomOf="@id/add_genre_button"
                 app:layout_constraintEnd_toStartOf="@+id/add_genre_button"
-                app:layout_constraintStart_toStartOf="@id/bio_editText"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/add_genre_button" />
 
             <com.google.android.material.button.MaterialButton
@@ -117,13 +121,16 @@
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                app:layout_constraintStart_toStartOf="@id/genres_textInputLayout"
-                app:layout_constraintEnd_toEndOf="@id/genres_textInputLayout"
+                android:layout_marginStart="20dp"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/genres_textInputLayout">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/edit_text_background"
                     android:hint="No. of members"
                     android:inputType="number"
                     android:text="@={groupSetupViewModel.noOfMembers}" />
@@ -133,39 +140,24 @@
                 android:id="@+id/contact_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
                 android:layout_marginBottom="20dp"
-                app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
+                app:layout_constraintBottom_toTopOf="@+id/price_text"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/genres_textInputLayout"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/no_of_members_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="20dp"
+                    android:background="@drawable/edit_text_background"
                     android:hint="Contact Number"
                     android:inputType="number"
                     android:text="@={groupSetupViewModel.contactNumber}" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:text="@={groupSetupViewModel"
-                app:layout_constraintEnd_toEndOf="@id/no_of_members_text"
-                app:layout_constraintStart_toStartOf="@id/contact_text"
-                app:layout_constraintTop_toBottomOf="@id/contact_text">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Price" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -173,17 +165,27 @@
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                app:layout_constraintStart_toStartOf="@id/genres_textInputLayout"
-                app:layout_constraintEnd_toEndOf="@id/genres_textInputLayout"
+                android:layout_marginStart="20dp"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/contact_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Price"
+                    android:background="@drawable/edit_text_background"
                     android:inputType="number"
                     android:text="@={groupSetupViewModel.price}" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/per_hour"
+                app:layout_constraintStart_toEndOf="@id/price_text"
+                app:layout_constraintBottom_toBottomOf="@id/price_text"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/save_button"
