--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,19 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/discover"
+        android:id="@+id/discover1"
         android:title="Discover"
         android:orderInCategory="1"
         android:icon="@drawable/ic_baseline_search_24" />
 
     <item
-        android:id="@+id/map"
+        android:id="@+id/map1"
         android:title="Map"
         android:orderInCategory="2"
         android:icon="@drawable/ic_baseline_location_on_24"/>
 
     <item
-        android:id="@+id/account"
+        android:id="@+id/account1"
         android:title="Account"
         android:orderInCategory="2"
         android:icon="@drawable/ic_baseline_account_circle_24"/>
