--- a/app/src/main/res/layout/fragment_artist_profile.xml
+++ b/app/src/main/res/layout/fragment_artist_profile.xml
@@ -13,6 +13,14 @@
         <variable
             name="groupModel"
             type="com.example.rockaroundapp.model.GroupArtist" />
+
+        <variable
+            name="artistReview1"
+            type="com.example.rockaroundapp.model.ArtistReview" />
+
+        <variable
+            name="artistReview2"
+            type="com.example.rockaroundapp.model.ArtistReview" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -531,7 +539,9 @@
                             android:layout_height="40dp"
                             android:src="@drawable/ic_baseline_account_circle_24"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:shapeAppearanceOverlay="@style/circleImageView"/>
+
 
                         <TextView
                             android:id="@+id/reviewer_name"
@@ -539,7 +549,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
-                            android:text="John Doe"
                             android:textSize="12sp"
                             app:layout_constraintStart_toEndOf="@id/reviewer_profile_img"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -548,7 +557,7 @@
                             android:id="@+id/review_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="10/12/22"
+                            android:text="@{artistReview1.date}"
                             android:textSize="9sp"
                             app:layout_constraintStart_toStartOf="@id/reviewer_name"
                             app:layout_constraintTop_toBottomOf="@id/reviewer_name" />
@@ -558,7 +567,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:text="This is the title"
+                            android:text="@{artistReview1.title}"
                             android:textSize="12sp"
                             app:layout_constraintStart_toStartOf="@id/review_date"
                             app:layout_constraintTop_toBottomOf="@id/review_date" />
@@ -569,7 +578,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="3dp"
                             android:layout_marginEnd="108dp"
-                            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pulvinar at mauris a vestibulum. Integer molestie erat et libero sodales elementum."
+                            android:text="@{artistReview1.description}"
                             android:textSize="10sp"
                             app:layout_constraintStart_toStartOf="@id/review_title"
                             app:layout_constraintTop_toBottomOf="@id/review_title" />
@@ -584,6 +593,19 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/review_card" />
+
+                <TextView
+                    android:id="@+id/no_reviews"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_reviews_too_see_here"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="@id/reviews_section"
+                    app:layout_constraintEnd_toEndOf="@id/reviews_section"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/reviews_section"
+                    app:layout_constraintVertical_bias="0.281"
+                    tools:layout_editor_absoluteX="0dp" />
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/review_card_2"
@@ -604,7 +626,8 @@
                             android:layout_height="40dp"
                             android:src="@drawable/ic_baseline_account_circle_24"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:shapeAppearanceOverlay="@style/circleImageView"/>
 
                         <TextView
                             android:id="@+id/reviewer_name_2"
@@ -612,7 +635,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
-                            android:text="John Doe"
                             android:textSize="12sp"
                             app:layout_constraintStart_toEndOf="@id/reviewer_profile_img_2"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -621,7 +643,7 @@
                             android:id="@+id/review_date_2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="10/12/22"
+                            android:text="@{artistReview2.date}"
                             android:textSize="9sp"
                             app:layout_constraintStart_toStartOf="@id/reviewer_name_2"
                             app:layout_constraintTop_toBottomOf="@id/reviewer_name_2" />
@@ -631,7 +653,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:text="This is the title"
+                            android:text="@{artistReview2.title}"
                             android:textSize="12sp"
                             app:layout_constraintStart_toStartOf="@id/review_date_2"
                             app:layout_constraintTop_toBottomOf="@id/review_date_2" />
@@ -642,7 +664,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="3dp"
                             android:layout_marginEnd="108dp"
-                            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pulvinar at mauris a vestibulum. Integer molestie erat et libero sodales elementum."
+                            android:text="@{artistReview2.description}"
                             android:textSize="10sp"
                             app:layout_constraintStart_toStartOf="@id/review_title_2"
                             app:layout_constraintTop_toBottomOf="@id/review_title_2" />
